Add main header.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
     </style>
   </head>
   <body>
+    <div class="tip-calculator__wrapper">
+      <!-- wrapper -->
+      <h1 id="main-header">
+        SPLI
+        <br />
+        TTER
+      </h1>
+      <div class="tip-calculator"></div>
+    </div>
+
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
